feat<SCRUM-34>: Integração com banco de dados MySQL e a criação da tela onde o aluno preenche as informações do seu TG