@@ -22,8 +22,8 @@
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.release>17</maven.compiler.release>
         
-        <!-- JavaFX Version - versão LTS estável -->
-        <javafx.version>17.0.2</javafx.version>
+        <!-- JavaFX Version -->
+        <javafx.version>17.0.12</javafx.version>
         
         <!-- Plugin Versions -->
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
@@ -54,11 +54,11 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- SQLite JDBC - versão estável -->
+        <!-- mysql JDBC - versão estável -->
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.42.0.0</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
         </dependency>
         
         <!-- JUnit para testes -->
@@ -78,10 +78,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <source>21</source>
+                    <target>21</target>
                     <release>${maven.compiler.release}</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
